# dotfiles

./: .Xresources  .bashrc  .cshrc  .gvimrc  .login  .tmux.conf  .vimrc  README.md
.Xresources.d/: URxvt.Xresources  XTerm.Xresources  Xcursor.Xresources  Xft.Xresources  colours.Xresources
.config/bash/include/: boni.bash
.config/bash/rc.d/: 10-functions.bashrc  20-bash-interactive.bashrc  30-locale.bashrc  30-xdg-base-dir.bashrc  35-nodejs.bashrc  35-python.bashrc  40-cmake.bashrc  40-cookiecutter.bashrc  40-gnupg.bashrc  40-go.bashrc  40-mypy.bashrc  40-neovim.bashrc  40-password-store.bashrc  40-pipx.bashrc  40-pyenv.bashrc  40-pylint.bashrc  40-rust.bashrc  40-stdman.bashrc  40-wsl.bashrc  50-devpi.bashrc  50-dotshare.bashrc  50-emscripten.bashrc  50-vcpkg.bashrc  70-termux.bashrc
.config/boni/dev-docker/: Dockerfile  build.bash  run.sh
.config/boni/kilo-dockered/: Dockerfile  build.bash  run.bash
.config/csh/login.d/: 50-dotshare.login  50-shell-variables.login
.config/csh/rc.d/: 30-xdg-user-directories.cshrc  50-shell-variables.csh  50-shell-variables.cshrc
.config/devpi-server/: devpi-server.yml
.config/emacs/: early-init.el  init.el
.config/emacs/early-init.el.d/: 20-xdg-directory.el  30-emacs-directory.el  50-change-package-directory.el
.config/emacs/init.el.d/: 10-package-initialize-for-pre-v27.el  30-custom.el  32-warnings.el  35-bookmark--path-setup.el  35-org--directory-setup.el  35-org--log-todo-creation-time.el  35-org--todo-list-appearance.el  35-org-common.el  50-backup-to-single-directory.el  50-fix-backspace-in-xterm.el  50-init.el  50-kill-processes-on-exit.el  (+2 more)
.config/git/: default.config
.config/i3/: config
.config/mintty/: README.md  config
.config/nvim/: init.vim
.config/python/: startup.py  startup_loader.py
.config/python/src/bonipy/: README.md  pyproject.toml  setup.cfg
.config/python/src/bonipy/docs/: conf.py
.config/python/src/bonipy/src/bonipy/: __main__.py  asyncio_ext.py  cli.py  cli_template.py  click_how.py  contextlib_ext.py  curses_ext.py  elastic_how.py  idler.py  inspect_ext.py  logging_ext.py  repl.py  result.py  smtplib_how.py  speech.py  taskmd.py  textual_how.py  todo.py  torch_how.py
.config/python/src/bonipy/src/bonipy/curses/: __init__.py  __main__.py
.config/python/src/bonipy/src/bonipy/curses_ext/: __main__.py  data.json  fake_async.py  fake_async_example.py  raii.py
.config/python/src/bonipy/src/bonipy/extension/: asyncio_ext.py  tkinter.py  watchdog.py
.config/python/src/bonipy/src/bonipy/extension/logging_ext/: __main__.py
.config/python/src/bonipy/src/bonipy/extension/watchdog_ext/asyncio_ext/: __init__.py  __main__.py
.config/python/src/bonipy/src/bonipy/floaty/: __main__.py
.config/python/src/bonipy/src/bonipy/pyscript_how/: __main__.py
.config/python/src/bonipy/src/bonipy/pyscript_how/projects/hello/: fractals.py  index.backup.html  index.html  main.css  main.py  main_backup.py  palettes.py  pygame_how.py  pyscript.toml  repl.py  test.py  use-idbfs.js
.config/python/src/bonipy/src/bonipy/pyxel_how/: hello.py
.config/python/src/bonipy/src/bonipy/tmux/: __main__.py  commands.py
.config/python/src/bonipy/stubs/click_repl/: __init__.pyi  exceptions.pyi
.config/python/src/bonipy/tests/test_bonipy/: test_cli.py  test_result.py  test_taskmd.py  test_tmux.py  test_todo.py_
.config/python/src/bonipy/tests/test_bonipy/input_taskmd/: fake_header_in_code_block.md
.config/python/src/bonipy/tests/test_bonipy/reference_taskmd/test_run/: decreasing_level.md.txt  empty_file.md.txt
.config/python/src/bonipy35/: LICENSE.txt  README.md  pyproject.toml  setup.cfg
.config/python/src/bonipy35/src/bonipy35/: __main__.py  asyncio_ext.py  bapt.py  contextlib_ext.py  functools_ext.py  inspect_ext.py  log_viewer.py  logging_ext.py  logparser.py  os_ext.py  repl.py  result.py  taskmd.py  xdg.py
.config/python/src/bonipy35/src/bonipy35/bapt/: __main__.py  cli.py  manifests.py  packaging.py
.config/python/src/bonipy35/src/bonipy35/curses_ext/: __main__.py  asyncio_loop.py  fake_async.py  fake_async_example.py  raii.py
.config/python/src/bonipy35/src/bonipy35/floaty/: __main__.py  gui.py
.config/python/src/bonipy35/src/bonipy35/notify/: __main__.py  cli.py  daemon.py  toast.ps.fstring
.config/python/src/bonipy35/src/bonipy35/static/: log_viewer.css  log_viewer.html  log_viewer.js
.config/python/src/bonipy35/src/bonipy35/taskmd/: data.py  vim.py
.config/python/src/bonipy35/stubs/: vim.pyi
.config/python/src/bonipy35/tests/test_bonipy35/: conftest.py  test_result.py
.config/python/src/bonipy35/tests/test_bonipy35/test_bapt/: test_packaging.py
.config/python/src/bonipy38/: README.md  pyproject.toml  setup.cfg
.config/python/src/bonipy38/src/bonipy38/: taskmd.py
.config/python/src/bonipy38/tests/test_bonipy38/: test_taskmd.py
.config/python/src/bonipy38/tests/test_bonipy38/input_taskmd/: decreasing_level.md  durations.md  fake_header_in_code_block.md  single_header.md
.config/python/src/bonipy38/tests/test_bonipy38/reference_taskmd/test_run/: fake_header_in_code_block.md.txt  single_header.md.txt
.config/tmux/: conf  tmux.conf
.config/vim/: vimrc
.config/vim/python3/: pyproject.toml  setup.cfg
.config/vim/python3/boni/: python.py  speech.py
.config/vim/python3/bonivim/: taskmd.py
.config/vim/python3/test_bonivim/: test_taskmd.py
.config/vim/python3/test_bonivim/reference_taskmd/test_run/: durations.md.txt
.config/vim/python3/vim/: __init__.pyi
.emacs.d/: early-init.el  init.el
(+97 files in other folders)
