[metadata]
name = bonivim
version = 0.1.0
author = Boni Lindsley
author_email = boni@lindsley.xyz
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
description = My tools for use in Vim

[options]
include_package_data = True
python_requires = >= 3.5
packages = bonivim

[options.extras_require]
dev =
    black >= 25.1.0
    coverage[toml] >= 7.6.12
    mypy >= 1.15.0
    pylint >= 3.3.3
    pytest >= 8.3.5
    tox >= 4.24.2

[options.package_data]
* = py.typed

[tox:tox]
env_list = py
min_version = 4.4.11

[testenv]
commands =
    {envpython} -m black --check --diff \
        boni \
        bonivim \
        setup.py \
        test_bonivim
    {envpython} -m mypy \
        --package bonivim \
        --package test_bonivim
    {envpython} -m mypy setup.py stubs
    {envpython} -m pylint \
        boni \
        bonivim \
        setup.py \
        test_bonivim
    {envpython} -m coverage erase
    {envpython} -m coverage run
    {envpython} -m coverage report
extras = dev
usedevelop = True
