[metadata]
name = bonipy
version = 0.1.0
author = Boni Lindsley
author_email = boni@lindsley.xyz
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
description = My tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    click >= 8.1.3
    click_repl >= 0.2.0
    pydantic >= 2.5.2
    bonipy35 >= 0.1.0 ; python_version >= "3.5"
python_requires = >= 3.5
packages = find_namespace:
package_dir =
    = src

[options.entry_points]
console_scripts =
  bonipy = bonipy.__main__:main
  textual_how = bonipy.textual_how:main

[options.extras_require]
dev =
    Sphinx >= 6.1.3
    black >= 23.3.0
    coverage[toml] >= 7.2.3
    mypy >= 1.2.0
    pandas-stubs >= 2.2.3
    pylint >= 2.17.2
    pytest >= 7.2.2
    tox >= 4.4.11
notification =
    fastapi >= 0.110.2
textual-how =
    pydantic >= 2.6.1
    textual >= 0.68.0
todo =
    markdown-it-py[plugins] >= 3.0.0
    mdformat >= 0.7.17
    pydantic >= 2.6.1
torch-how =
    matplotlib >= 3.10.0
    numpy >= 2.2.1
    pandas >= 2.2.3
    platformdirs >= 4.3.6
    scikit-learn >= 1.6.1
    torch >= 2.5.1
    torchvision >= 0.20.1

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[tox:tox]
env_list = py
min_version = 4.4.11

[testenv]
commands =
    {envpython} -m black --check --diff src stubs tests setup.py docs
    {envpython} -m mypy \
        --package bonipy \
        --package test_bonipy \
        --package docs
    {envpython} -m mypy setup.py stubs
    {envpython} -m pylint \
        bonipy \
        tests/test_bonipy \
        docs \
        setup.py
    {envpython} -m coverage erase
    {envpython} -m coverage run
    {envpython} -m coverage report
extras = dev
usedevelop = True
