[metadata]
name = bonipy38
version = 0.1.0
author = Boni Lindsley
author_email = boni@lindsley.xyz
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
description = My tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
python_requires = >= 3.6
packages = find_namespace:
package_dir =
    = src

[options.extras_require]
dev =
    Sphinx >= 6.1.3
    black >= 23.3.0
    coverage[toml] >= 7.2.3
    mypy >= 1.2.0
    pylint >= 2.17.2
    pytest >= 7.2.2
    tox >= 4.4.11

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[tox:tox]
env_list = py
min_version = 4.4.11

[testenv]
commands =
    {envpython} -m black --check --diff src tests setup.py
    {envpython} -m mypy \
        --package bonipy38 \
        --package test_bonipy38
    {envpython} -m mypy setup.py
    {envpython} -m pylint \
        bonipy38 \
        tests/test_bonipy38 \
        setup.py
    {envpython} -m coverage erase
    {envpython} -m coverage run
    {envpython} -m coverage report
extras = dev
usedevelop = True
